Use tasty-rerun to allow rerunning failed tests only
Use by

  stack --stack-yaml=stack84.yaml test --test-arguments "--rerun"

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -255,6 +255,7 @@ test-suite ghcide-tests
         tasty-expected-failure,
         tasty-hunit,
         tasty-quickcheck,
+        tasty-rerun,
         text
     hs-source-dirs: test/cabal test/exe test/src
     include-dirs: include
