ghc-check: explicit libdir and delay version error

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -183,7 +183,7 @@ executable ghcide
         directory,
         extra,
         filepath,
-        ghc-check,
+        ghc-check >= 0.1.0.3,
         ghc-paths,
         ghc,
         gitrev,
@@ -201,6 +201,7 @@ executable ghcide
         Paths_ghcide
         Rules
         RuleTypes
+        Util
 
     default-extensions:
         BangPatterns
