Add a custom prefix to command IDs
A client can run more than one instance of ghcide.  Some clients have a global
command registry, and all commands must be unique in that registry.

So to make the command ids unique, prefix them with the ghcide server process
id, as is done in haskell-ide-engine.

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -99,6 +99,7 @@ library
     include-dirs:
         include
     exposed-modules:
+        Development.IDE.Compat
         Development.IDE.Core.Debouncer
         Development.IDE.Core.FileStore
         Development.IDE.Core.IdeConfiguration
