--- a/stack88.yaml
+++ b/stack88.yaml
@@ -2,11 +2,9 @@ resolver: nightly-2020-02-13
 packages:
 - .
 extra-deps:
-# - haskell-lsp-types-0.20.0.0
-- github: jneira/haskell-lsp
-  commit: 66fe48f7c65bf98bcb3a173747f173be0611560a
-  subdirs:
-    - haskell-lsp-types
+- haskell-lsp-0.21.0.0
+- haskell-lsp-types-0.21.0.0
+- lsp-test-0.10.2.0
 
 nix:
   packages: [zlib]
