--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -79,9 +79,11 @@
     - Development.IDE.Compat
     - Development.IDE.Core.FileStore
     - Development.IDE.Core.Compile
+    - Development.IDE.Core.Rules
     - Development.IDE.GHC.Compat
     - Development.IDE.GHC.Util
     - Development.IDE.Import.FindImports
+    - Development.IDE.LSP.Outline
     - Development.IDE.Spans.Calculate
     - Development.IDE.Spans.Documentation
     - Development.IDE.Spans.Common
