--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -80,6 +80,7 @@
     - Development.IDE.Core.FileStore
     - Development.IDE.Core.Compile
     - Development.IDE.GHC.Compat
+    - Development.IDE.GHC.Orphans
     - Development.IDE.GHC.Util
     - Development.IDE.Import.FindImports
     - Development.IDE.Spans.Calculate
