--- a/stack810.yaml
+++ b/stack810.yaml
@@ -8,6 +8,7 @@ extra-deps:
 - haskell-lsp-types-0.22.0.0
 - lsp-test-0.11.0.1
 - ghc-check-0.3.0.1
+- hie-bios-0.5.0
 
 # for ghc-8.10
 - Cabal-3.2.0.0
