--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -52,6 +52,7 @@ library
         hashable,
         haskell-lsp-types == 0.22.*,
         haskell-lsp == 0.22.*,
+        monad-loops,
         mtl,
         network-uri,
         prettyprinter-ansi-terminal,
@@ -63,6 +64,7 @@ library
         shake >= 0.18.4,
         sorted-list,
         stm,
+        stm-chans,
         syb,
         text,
         time,
