--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -207,6 +207,7 @@ executable ghcide
         hie-bios >= 0.4.0 && < 0.5,
         ghcide,
         optparse-applicative,
+        safe-exceptions,
         shake,
         text,
         unordered-containers
