--- a/.azure/linux-stack.yml
+++ b/.azure/linux-stack.yml
@@ -35,7 +35,6 @@ jobs:
       sudo add-apt-repository ppa:hvr/ghc
       sudo apt-get update
       sudo apt-get install -y g++ gcc libc6-dev libffi-dev libgmp-dev make zlib1g-dev cabal-install-3.2
-      export PATH=/opt/cabal/bin:$PATH
       if ! which stack >/dev/null 2>&1; then
          curl -sSL https://get.haskellstack.org/ | sh
       fi
@@ -44,7 +43,9 @@ jobs:
     displayName: 'stack setup'
   - bash: stack build --only-dependencies --stack-yaml=$STACK_YAML
     displayName: 'stack build --only-dependencies'
-  - bash: stack test --ghc-options=-Werror  --stack-yaml=$STACK_YAML || stack test --ghc-options=-Werror --stack-yaml=$STACK_YAML|| stack test --ghc-options=-Werror --stack-yaml=$STACK_YAML
+  - bash: |
+      export PATH=/opt/cabal/bin:$PATH
+      stack test --ghc-options=-Werror  --stack-yaml=$STACK_YAML || stack test --ghc-options=-Werror --stack-yaml=$STACK_YAML|| stack test --ghc-options=-Werror --stack-yaml=$STACK_YAML
     # ghcide stack tests are flaky, see https://github.com/digital-asset/daml/issues/2606.
     displayName: 'stack test --ghc-options=-Werror'
   - bash: |
