--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -318,9 +318,11 @@ benchmark ghcide-bench
         extra,
         filepath,
         ghcide,
-        lsp-test >= 0.11.0.1 && < 0.12,
+        lsp-test < 0.12,
+        optparse-applicative,
         parser-combinators,
-        process
+        process,
+        safe-exceptions
     hs-source-dirs: bench
     include-dirs: include
     ghc-options: -threaded -Wall -Wno-name-shadowing
