--- a/stack84.yaml
+++ b/stack84.yaml
@@ -23,11 +23,13 @@ extra-deps:
 - file-embed-0.0.11.2
 - heaps-0.3.6.1
 - ghc-check-0.5.0.1
+- extra-1.7.2
 # For tasty-retun
 - ansi-terminal-0.10.3
 - ansi-wl-pprint-0.6.9
 - tasty-1.2.3
 - tasty-rerun-1.1.17
+
 
 nix:
   packages: [zlib]
