--- a/.azure/windows-stack.yml
+++ b/.azure/windows-stack.yml
@@ -47,9 +47,20 @@ jobs:
       stack install happy --stack-yaml $STACK_YAML
       stack install alex --stack-yaml $STACK_YAML
       stack install cabal-install --stack-yaml $STACK_YAML
-      stack build --only-dependencies --stack-yaml $STACK_YAML
+      # GHC 8.10 keeps crashing with various kinds of access violations and other
+      # errors so we retry 3 times.
+      if [ "$STACK_YAML" = "stack810.yaml" ]; then
+        stack build --only-dependencies --stack-yaml $STACK_YAML || stack build --only-dependencies --stack-yaml $STACK_YAML || stack build --only-dependencies --stack-yaml $STACK_YAML
+      else
+        stack build --only-dependencies --stack-yaml $STACK_YAML
+      fi
     displayName: 'stack build --only-dependencies'
-  - bash: stack test --no-run-tests --ghc-options=-Werror --stack-yaml $STACK_YAML
+  - bash: |
+      if [ "$STACK_YAML" = "stack810.yaml" ]; then
+        stack test --no-run-tests --ghc-options=-Werror --stack-yaml $STACK_YAML || stack test --no-run-tests --ghc-options=-Werror --stack-yaml $STACK_YAML || stack test --no-run-tests --ghc-options=-Werror --stack-yaml $STACK_YAML
+      else
+        stack test --no-run-tests --ghc-options=-Werror --stack-yaml $STACK_YAML
+      fi
     displayName: 'stack test --ghc-options=-Werror'
     # TODO: run test suite when failing tests are fixed or marked as broken. See https://github.com/digital-asset/ghcide/issues/474
   - bash: |
