--- a/hie.yaml
+++ b/hie.yaml
@@ -14,7 +14,7 @@ cradle:
               component: "ghcide:test:ghcide-tests"
             - path: "./bench"
               component: "ghcide:exe:ghcide-bench"
-            - path: "./bench/Hist"
+            - path: "./bench/hist"
               component: "ghcide:bench:benchHist"
             - path: "./test/preprocessor"
               component: "ghcide:exe:ghcide-test-preprocessor"
