--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -1,4 +1,4 @@
-cabal-version:      3.0
+cabal-version:      1.20
 build-type:         Simple
 category:           Development
 name:               ghcide
@@ -79,7 +79,14 @@ library
       build-depends:
         ghc-boot-th,
         ghc-boot,
-        ghc >= 8.4
+        ghc >= 8.4,
+        -- These dependencies are used by Development.IDE.Session and are
+        -- Haskell specific. So don't use them when building with -fghc-lib!
+        ghc-check,
+        ghc-paths,
+        cryptohash-sha1 >=0.11.100 && <0.12,
+        hie-bios == 0.6.*,
+        base16-bytestring >=0.1.1 && <0.2
     if os(windows)
       build-depends:
         Win32
@@ -135,6 +142,20 @@ library
         Development.IDE.Plugin
         Development.IDE.Plugin.Completions
         Development.IDE.Plugin.CodeAction
+
+    -- Unfortunately, we cannot use loadSession with ghc-lib since hie-bios uses
+    -- the real GHC library and the types are incompatible. Furthermore, when
+    -- building with ghc-lib we need to make this Haskell agnostic, so no
+    -- hie-bios!
+    -- We also put these modules into a separate hs-source-dirs so we can avoid
+    -- compiling them at all if ghc-lib is not set
+    if !flag(ghc-lib)
+      hs-source-dirs:
+        session-loader
+      exposed-modules:
+        Development.IDE.Session
+      other-modules:
+        Development.IDE.Session.VersionCheck
     other-modules:
         Development.IDE.Core.Compile
         Development.IDE.Core.Preprocessor
@@ -174,41 +195,10 @@ library
         Development.IDE.GHC.HieAst
         Development.IDE.GHC.HieBin
     ghc-options: -Wall -Wno-name-shadowing
-
-library ghcide-session-loader
-    visibility: public
-    default-language: Haskell2010
-    hs-source-dirs: session-loader
-    exposed-modules:
-        Development.IDE.Session
-    ghc-options: -Wall -Wno-name-shadowing
-    build-depends:
-        base == 4.*,
-        aeson,
-        async,
-        base16-bytestring >=0.1.1 && <0.2,
-        bytestring,
-        containers,
-        cryptohash-sha1 >=0.11.100 && <0.12,
-        directory,
-        extra,
-        filepath,
-        ghc,
-        ghc-check,
-        ghc-paths,
-        ghcide,
-        haskell-lsp,
-        haskell-lsp-types,
-        hie-bios >= 0.6.0 && < 0.7,
-        safe-exceptions,
-        shake,
-        text,
-        time,
-        unordered-containers
-    -- We can't build this with ghc-lib since it interfaces with hie-bios which
-    -- uses plain ghc types
-    if flag(ghc-lib)
-        buildable: False
+    -- This is needed to prevent a GHC crash when building
+    -- Development.IDE.Session with stack on 8.10.1 on Windows
+    if (impl(ghc > 8.9) && os(windows))
+      ghc-options: -fexternal-interpreter
 
 executable ghcide-test-preprocessor
     default-language: Haskell2010
@@ -277,7 +267,6 @@ executable ghcide
         directory,
         extra,
         filepath,
-        ghcide-session-loader,
         gitrev,
         hashable,
         haskell-lsp,
