module Development.IDE
A single module to reexport all the commonly used names to simplify the use of
ghcide as a library

--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -117,6 +117,7 @@ library
     include-dirs:
         include
     exposed-modules:
+        Development.IDE
         Development.IDE.Compat
         Development.IDE.Core.Debouncer
         Development.IDE.Core.FileStore
