--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -179,6 +179,7 @@ library
         Development.IDE.Plugin.CodeAction.RuleTypes
         Development.IDE.Plugin.Completions.Logic
         Development.IDE.Plugin.Completions.Types
+        Development.IDE.Types.Action
     if (impl(ghc > 8.5) && impl(ghc < 8.7)) && !flag(ghc-lib)
       hs-source-dirs: src-ghc86
       other-modules:
