--- a/stack810.yaml
+++ b/stack810.yaml
@@ -8,6 +8,8 @@ extra-deps:
 - lsp-test-0.11.0.5
 - ghc-check-0.5.0.1
 - hie-bios-0.7.1
+- opentelemetry-0.6.0
+- opentelemetry-extra-0.6.0
 
 # not yet in stackage
 - Chart-diagrams-1.9.3
