--- a/stack88.yaml
+++ b/stack88.yaml
@@ -10,7 +10,8 @@ extra-deps:
 - extra-1.7.2
 - implicit-hie-0.1.1.0
 - implicit-hie-cradle-0.2.0.0
-
+- opentelemetry-0.6.0
+- opentelemetry-extra-0.6.0
 nix:
   packages: [zlib]
 
