Use heapsize instead of ghc-datasize
I renamed the fork to distringuish from the original.
It is still being pulled from git using stack. This will be addressed
once I can push the fork to hackage.

--- a/stack.yaml
+++ b/stack.yaml
@@ -19,7 +19,9 @@ extra-deps:
 - tasty-rerun-1.1.17
 - ghc-check-0.5.0.1
 - extra-1.7.2
-
+- opentelemetry-0.4.2
+- git: https://github.com/mpardalos/heapsize.git
+  commit: e6d791eadeb97920d6697627de026e996465850d
 nix:
   packages: [zlib]
 
