Write Values map size to OpenTelemetry metric

--- a/stack88.yaml
+++ b/stack88.yaml
@@ -12,6 +12,10 @@ extra-deps:
 - implicit-hie-cradle-0.2.0.0
 - opentelemetry-0.6.0
 - opentelemetry-extra-0.6.0
+- ghc-events-0.13.0
+- ghc-trace-events-0.1.2.1
+- git: https://github.com/mpardalos/ghc-datasize.git
+  commit: e4f4829c8f6e2430455e73b32d499e856c4ff58f
 nix:
   packages: [zlib]
 
