--- a/stack810.yaml
+++ b/stack810.yaml
@@ -10,6 +10,10 @@ extra-deps:
 - hie-bios-0.7.1
 - opentelemetry-0.6.0
 - opentelemetry-extra-0.6.0
+- ghc-events-0.13.0
+- ghc-trace-events-0.1.2.1
+- git: https://github.com/mpardalos/ghc-datasize.git
+  commit: e4f4829c8f6e2430455e73b32d499e856c4ff58f
 
 # not yet in stackage
 - Chart-diagrams-1.9.3
