--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -118,6 +118,7 @@ library
     include-dirs:
         include
     exposed-modules:
+        Development.IDE
         Development.IDE.Compat
         Development.IDE.Core.Debouncer
         Development.IDE.Core.FileStore
