--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,3 +16,4 @@ pr:
 jobs:
   - template: ./.azure/linux-stack.yml
   - template: ./.azure/windows-stack.yml
+  - template: ./.azure/linux-bench.yml
