--- a/bench/hist.yaml
+++ b/bench/hist.yaml
@@ -2,7 +2,7 @@
 # At least 100 is recommended in order to observe space leaks
 samples: 100
 
-buildTool: cabal
+buildTool: stack
 
 # Path to the ghcide-bench binary to use for experiments
 ghcideBench: ghcide-bench
