--- a/.azure/linux-bench.yml
+++ b/.azure/linux-bench.yml
@@ -21,12 +21,9 @@ jobs:
     displayName: "Unpack cache"
     condition: eq(variables.CACHE_RESTORED, 'true')
   - bash: |
-      ./fmt.sh
-    displayName: "HLint via ./fmt.sh"
-  - bash: |
       sudo add-apt-repository ppa:hvr/ghc
       sudo apt-get update
-      sudo apt-get install -y g++ gcc libc6-dev libffi-dev libgmp-dev make zlib1g-dev cabal-install-3.2
+      sudo apt-get install -y g++ gcc libc6-dev libffi-dev libgmp-dev zlib1g-dev
       if ! which stack >/dev/null 2>&1; then
          curl -sSL https://get.haskellstack.org/ | sh
       fi
@@ -37,8 +34,7 @@ jobs:
     displayName: 'stack build --only-dependencies'
   - bash: |
       export PATH=/opt/cabal/bin:$PATH
-      stack bench --ghc-options=-Werror  --stack-yaml=$STACK_YAML || stack bench --ghc-options=-Werror --stack-yaml=$STACK_YAML|| stack bench --ghc-options=-Werror --stack-yaml=$STACK_YAML
-    # ghcide stack tests are flaky, see https://github.com/digital-asset/daml/issues/2606.
+      stack bench --ghc-options=-Werror  --stack-yaml=$STACK_YAML
     displayName: 'stack bench --ghc-options=-Werror'
   - bash: |
       mkdir -p .azure-cache
@@ -47,5 +43,6 @@ jobs:
   - bash: |
       cat bench-hist/results.csv
     displayName: "cat results"
-  - publish: bench-hist/*.svg
+  - publish: bench-hist
+    artifact: benchmarks
     displayName: "publish"
