use default stack.yaml

--- a/.azure/linux-bench.yml
+++ b/.azure/linux-bench.yml
@@ -5,8 +5,8 @@ jobs:
     vmImage: 'ubuntu-latest'
   strategy:
     matrix:
-      stack_810:
-        STACK_YAML: "stack810.yaml"
+      stack:
+        STACK_YAML: "stack.yaml"
   steps:
   - checkout: self
   - task: Cache@2
