--- a/stack84.yaml
+++ b/stack84.yaml
@@ -12,6 +12,9 @@ extra-deps:
 - filepattern-0.1.1
 - js-dgtable-0.5.2
 - hie-bios-0.7.1
+- implicit-hie-0.1.1.0
+- github: Avi-D-coder/implicit-hie-cradle
+  commit: f7bfc24ed036e31c0a758b9ab6665c4999eb4fe0
 - fuzzy-0.1.0.0
 - shake-0.18.5
 - time-compat-1.9.2.2
@@ -24,8 +27,6 @@ extra-deps:
 - heaps-0.3.6.1
 - ghc-check-0.5.0.1
 - extra-1.7.2
-- implicit-hie-0.1.1.0
-- implicit-hie-cradle-0.1.0.0
 # For tasty-retun
 - ansi-terminal-0.10.3
 - ansi-wl-pprint-0.6.9
