--- a/.azure/windows-stack.yml
+++ b/.azure/windows-stack.yml
@@ -49,15 +49,15 @@ jobs:
       stack install cabal-install --stack-yaml $STACK_YAML
       # GHC 8.10 keeps crashing with various kinds of access violations and other
       # errors so we retry 3 times.
-      if [ "$STACK_YAML" = "stack810.yaml" ]; then
-        stack build --only-dependencies --stack-yaml $STACK_YAML || stack build --only-dependencies --stack-yaml $STACK_YAML || stack build --only-dependencies --stack-yaml $STACK_YAML
+      if [ "$STACK_YAML" = "stack8101.yaml" ]; then
+        stack build --only-dependencies --stack-yaml $STACK_YAML --ghc-options="-fexternal-interpreter" || stack build --only-dependencies --stack-yaml $STACK_YAML --ghc-options="-fexternal-interpreter" || stack build --only-dependencies --stack-yaml $STACK_YAML  --ghc-options="-fexternal-interpreter"
       else
         stack build --only-dependencies --stack-yaml $STACK_YAML
       fi
     displayName: 'stack build --only-dependencies'
   - bash: |
-      if [ "$STACK_YAML" = "stack810.yaml" ]; then
-        stack test --no-run-tests --ghc-options=-Werror --stack-yaml $STACK_YAML || stack test --no-run-tests --ghc-options=-Werror --stack-yaml $STACK_YAML || stack test --no-run-tests --ghc-options=-Werror --stack-yaml $STACK_YAML
+      if [ "$STACK_YAML" = "stack8101.yaml" ]; then
+        stack test --no-run-tests --ghc-options="-Werror -fexternal-interpreter" --stack-yaml $STACK_YAML || stack test --no-run-tests --ghc-options="-Werror -fexternal-interpreter" --stack-yaml $STACK_YAML || stack test --no-run-tests --ghc-options="-Werror -fexternal-interpreter" --stack-yaml $STACK_YAML
       else
         stack test --no-run-tests --ghc-options=-Werror --stack-yaml $STACK_YAML
       fi
