--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -341,6 +341,7 @@ test-suite ghcide-tests
         QuickCheck,
         quickcheck-instances,
         record-dot-preprocessor,
+        -- record-hasfield,
         rope-utf16-splay,
         safe,
         safe-exceptions,
