Pack before testing

--- a/.azure/linux-bench.yml
+++ b/.azure/linux-bench.yml
@@ -31,15 +31,15 @@ jobs:
   - bash: stack setup --stack-yaml=$STACK_YAML
     displayName: 'stack setup'
   - bash: stack build --bench --only-dependencies --stack-yaml=$STACK_YAML
-    displayName: 'stack build --only-dependencies'
-  - bash: |
-      export PATH=/opt/cabal/bin:$PATH
-      stack bench --ghc-options=-Werror  --stack-yaml=$STACK_YAML
-    displayName: 'stack bench --ghc-options=-Werror'
+    displayName: 'stack build --bench --only-dependencies'
   - bash: |
       mkdir -p .azure-cache
       tar czf .azure-cache/stack-root.tar.gz -C $HOME .stack
     displayName: "Pack cache"
+  - bash: |
+      export PATH=/opt/cabal/bin:$PATH
+      stack bench --ghc-options=-Werror  --stack-yaml=$STACK_YAML
+    displayName: 'stack bench --ghc-options=-Werror'
   - bash: |
       cat bench-hist/results.csv
     displayName: "cat results"
