--- a/.azure/linux-bench.yml
+++ b/.azure/linux-bench.yml
@@ -11,7 +11,7 @@ jobs:
   - checkout: self
   - task: Cache@2
     inputs:
-      key: stack-cache-v2 | $(Agent.OS) | $(Build.SourcesDirectory)/$(STACK_YAML) | $(Build.SourcesDirectory)/ghcide.cabal
+      key: stack-cache-bench | $(Agent.OS) | $(Build.SourcesDirectory)/$(STACK_YAML) | $(Build.SourcesDirectory)/ghcide.cabal
       path: .azure-cache
       cacheHitVar: CACHE_RESTORED
     displayName: "Cache stack artifacts"
