--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,5 +16,4 @@ pr:
 jobs:
   - template: ./.azure/linux-stack.yml
   - template: ./.azure/windows-stack.yml
-# https://github.com/haskell/ghcide/pull/801
-#   - template: ./.azure/linux-bench.yml
+  - template: ./.azure/linux-bench.yml
