--- a/ghcide.cabal
+++ b/ghcide.cabal
@@ -340,8 +340,6 @@ test-suite ghcide-tests
         process,
         QuickCheck,
         quickcheck-instances,
-        record-dot-preprocessor,
-        record-hasfield,
         rope-utf16-splay,
         safe,
         safe-exceptions,
@@ -352,6 +350,10 @@ test-suite ghcide-tests
         tasty-quickcheck,
         tasty-rerun,
         text
+    if (impl(ghc >= 8.6))
+      build-depends:
+          record-dot-preprocessor,
+          record-hasfield
     hs-source-dirs: test/cabal test/exe test/src bench/lib
     include-dirs: include
     ghc-options: -Wall -Wno-name-shadowing -O0
